Fix trigger('change') for targetEntry selector forms

--- a/templates/_form.html
+++ b/templates/_form.html
@@ -54,7 +54,7 @@
 
 					$('#element-selector-' + locale).show();
 					$('#element-selector-' + locale).find('input[type="hidden"]').removeAttr('disabled');
-				});
+				}).trigger('change');
 			}
 		</script>
 
